--- a/style/_font.scss
+++ b/style/_font.scss
@@ -1,3 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
-$font-family: 'Oxygen', sans-serif;
+$font-family-oxygen: 'Oxygen', sans-serif;
+$size-font-light: 300;
+$size-font-regular: 400;
+$size-font-bold: 700;
