--- a/style/_color.scss
+++ b/style/_color.scss
@@ -7,3 +7,6 @@ $color-gray-positive-button: rgba(145, 255, 135, 1);
 $color-gray-light: rgba(243, 243, 243, 1);
 $color-gray-x-weight: rgba(222, 222, 222, 1);
 $color-gray-xx-weight:rgb(105, 105, 105);
+$color-red-shadow:rgba(255, 185, 185, 1);
+$color-green-shadow: rgba(175, 237, 165, 1);
+$color-purple-shadow: rgba(227, 165, 237, 1);
