--- a/style/style.scss
+++ b/style/style.scss
@@ -4,7 +4,7 @@
 body {
   background-color: $color-gray-weight;
   margin: 0;
-  width: 100vw;
+  // overflow: hidden;
   header {
     background-color: $color-gray-weight;
     box-shadow: 0px 4px 13px $color-gray-shadow;
@@ -25,22 +25,20 @@ body {
         color: $color-gray-xx-weight;
       }
 
-      div {
+      button {
         background-color: $color-gray-x-weight;
-        padding: 0.6em 1.8em;
+        border: none;
+        padding: 0.6em 1.3em;
         border-radius: 0.8em;
+        color: $color-gray-xx-weight;
+        font-family: $font-family-oxygen;
+        font-weight: $size-font-bold;
+        font-size: 1.5rem;
         &:hover,:focus {
           cursor: pointer;
           box-shadow: -3px -3px 10px $color-red-shadow,
            3px 3px 10px $color-red-shadow;
          transform:scale(1.1);
-        }
-        h2 {
-          margin: 0;
-          color: $color-gray-xx-weight;
-          font-family: $font-family-oxygen;
-          font-weight: $size-font-bold;
-          font-size: 1.8rem;
         }
       }
     }
@@ -51,12 +49,12 @@ body {
     justify-content: center;
     main {
       width: 1400px;
-      // border: 1px solid red;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(15em , 1fr));
-      gap: 5em;
+      grid-template-columns: repeat(auto-fit, minmax(18em , 1fr));
+      row-gap: 2em;
       justify-items: center;
       padding: 3em 0em;
+      box-sizing: border-box;
       .container-piece{
         width: fit-content;
         background-color: $color-gray-light;
@@ -173,8 +171,8 @@ body {
   .overall {
     display: none;
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color:rgba(0, 0, 0, 0.15);
   }
 }
