complete style and html structure

--- a/style/_color.scss
+++ b/style/_color.scss
@@ -1,3 +1,4 @@
+
 $color-gray-weight: rgba(234, 234, 234, 1);
 $color-gray-shadow: rgba(214, 214, 214, 1);
 $color-gray-text: rgba(124, 124, 124, 1);
@@ -10,3 +11,4 @@ $color-gray-xx-weight:rgb(105, 105, 105);
 $color-red-shadow:rgba(255, 185, 185, 1);
 $color-green-shadow: rgba(175, 237, 165, 1);
 $color-purple-shadow: rgba(227, 165, 237, 1);
+$color-blue-shadow: rgba(164, 255, 244, 1);
