--- a/style/style.scss
+++ b/style/style.scss
@@ -61,7 +61,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 2em;
+        gap: 1.3em;
         padding: 2em 3em;
         border-radius: 2.2em;
         box-shadow: -5px -5px 13px $color-gray-shadow,
@@ -78,6 +78,7 @@ body {
           font-size: 1.5rem;
           padding: 0.3em 1em;
           border-radius: 5px;
+          margin-top: 1em;
           background-color: $color-gray-positive-button;
           color: $color-gray-text-button;
           &:hover,:focus {
@@ -85,6 +86,17 @@ body {
             box-shadow: -2px -2px 5px $color-purple-shadow,
              2px 2px 5px $color-purple-shadow;
            transform:scale(1.1);
+          }
+        }
+        .remove-button {
+          font-size: 1.2em;
+          margin-top: 0;
+          background-color: $color-gray-x-weight;
+          &:hover,:focus {
+            cursor: pointer;
+            box-shadow: -2px -2px 5px $color-blue-shadow,
+             2px 2px 5px $color-blue-shadow;
+             transform:scale(1.1);
           }
         }
       }
@@ -97,13 +109,11 @@ body {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    // display: flex;
     justify-content: center;
     align-items: center;
     form {
       display: none;
       z-index: 1;
-      display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -113,7 +123,7 @@ body {
       width: min(90%, 400px);
       border-radius: 2em;
       // transform: translate(-50%, -50%) scale(0);
-      // transition: 200ms ease-in-out;
+      // transition: 200ms ease-in-out; 
       div {
         display: flex;
         width: 100%;
